Products/ZenUI3/browser/resources/css/zenoss.css
/* ... */
.severity-icon-small.critical {
  background-position: 0px  0px;
}

.severity-icon-small.error {
  background-position: 0px -20px;
}

.severity-icon-small.warning {
  background-position: 0px -40px;
}

.severity-icon-small.info {
  background-position: 0px -60px;
}

.severity-icon-small.debug {
  background-position: 0px -80px;
}

.severity-icon-small.clear {
  background-position: 0px -100px;
}


/* positioned here for the cascade */
#evdetail_hd .severity-icon {
  height: 50px;
  margin: 0 8px;
  width: 35px;
  background: transparent url(/++resource++zenui/img/xtheme-zenoss/icon/severity-sprite-large.png) 100px 100px no-repeat;
}
#evdetail_hd .severity-icon .x-panel-body{
    background: none !important; /* an IE fix for a blocking bar across the top of the icon */
}
#evdetail_hd .severity-icon.critical {
  background-position: 0px 0px;
}

#evdetail_hd .severity-icon.error {
  background-position: -44px 0px;
}

#evdetail_hd .severity-icon.info {
  background-position: -88px 0px;
}

#evdetail_hd .severity-icon.debug {
  background-position: -132px 0px;
}

#evdetail_hd .severity-icon.clear {
  background-position: -176px 0px;
}

#evdetail_hd .severity-icon.warning {
  background-position: -220px 0px;
}

#PerformanceGraphs .x-panel-default, #PerformanceGraphs .x-panel-body, #evdetail_props{
    height:auto !important;
}
#PerformanceGraphs .x-panel-body{
    position:relative;
    background:transparent !important;
    padding-bottom:26px;
    top:26px !important;
    z-index:1 !important;
}
#PerformanceGraphs .x-toolbar .x-box-inner{
    z-index:1100 !important;
}
#PerformanceGraphs .x-toolbar{
    position:absolute;
    margin-right:3px !important;
}
.prioritycombo input{
    visibility:visible !important;
    display: block !important;  /* This is mandatory because IE sets this field to none */
}
#collectorpanel-body *{
    font-size:13px !important;
}
#collectorId, #collectorHostField, #rootPasswordField{
    width:380px !important;
}
#collectorfieldset label{
    width:120px !important;
}
#collectorfieldset input{
    width:250px !important;
}

#footer_extra .x-btn td, #propList .x-btn td{
    padding-right:0 !important;
}

.x-window-body .x-panel-body .x-boundlist li{
  color: #000 !important;
}
.x-ie .x-progress-bar {
    background-color:#73A3E0 !important;
}
.x-ie #definition_description{
    width:100%;
}
table {
    display: table;
}
.x-toolbar-separator{
    border-width:1px !important;
}
#master_panel .x-toolbar-default{
    background-image: url("../img/xtheme-zenoss/toolbar/bg-subselect.png") !important;
}
#events_grid .x-toolbar-default{
    background-image: url() !important;
}
#master_panel .x-hierarchy-search{
    top:4px !important; left:5px !important;
}
.x-window-body, .x-window-body .x-form-item-label, .x-window-body .x-form-cb-label{
    color:#fafafa;
}
.white-background-panel, .white-background-panel .x-form-item-label, .white-background-panel .x-form-cb-label{
    color:black;
}

 
.x-ie .white-background-panel .x-tab-default-mc, 
.x-ie .white-background-panel .x-tab-default-ml, 
.x-ie .white-background-panel .x-tab-default-mr,
.x-ie .white-background-panel .x-tab-default-tr, 
.x-ie .white-background-panel .x-tab-default-tl, 
.x-ie .white-background-panel .x-tab-default-tc{
    background-color: #d3e0f2 !important;
}
.x-ie .white-background-panel .x-tab-top-active .x-frame-mc, 
.x-ie .white-background-panel .x-tab-top-active .x-frame-ml, 
.x-ie .white-background-panel .x-tab-top-active .x-frame-mr,
.x-ie .white-background-panel .x-tab-top-active .x-frame-tr, 
.x-ie .white-background-panel .x-tab-top-active .x-frame-tl, 
.x-ie .white-background-panel .x-tab-top-active .x-frame-tc{
    background-repeat: repeat-x;
    background-color: rgb(222, 236, 253) !important;
}



#footer_extra{
    position:absolute;
    top:2px;
}
#component_searchfield-inputEl{
    background: url("../img/xtheme-zenoss/compsearch.png") no-repeat 0 2px;
}
pre {
    white-space: pre;
    white-space: pre-wrap;
    white-space: pre-line;
    white-space: -moz-pre-wrap;
    word-wrap: break-word;
}
#device_overview-body .device-overview-form{
    overflow:hidden;
}
.white-background-panel .x-column-header-inner{
    padding-top: 2px !important;
}
.x-ie .white-background-panel .x-window-default-mr, .x-ie .x-window-default-mr{
    padding-left: 0px !important;
}
/*
.x-ie .white-background-panel .x-tab-top{
    background-color: rgb(150, 150, 150) !important;
}
.x-ie .white-background-panel .x-tab-top-active{
    background-color: rgb(240, 240, 240) !important;
}
*/
.x-ie .white-background-panel .x-fieldset-body, .x-ie .white-background-panel .x-fieldset{
    overflow:visible !important;
}
.zenportlet .x-container-default{
    padding: 3px 0 0 5px;
}

